--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^1.18.6"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3"
   }
 }
